--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
                     </div>
                 </div>
             </nav>
-            <!-- <div id="mainContainer"></div> -->
-            <div id="testContainer">
-                
-            </div>
+            <div id="mainContainer"></div>
+            <!-- <div id="testContainer">
+            </div> -->
         </div>  
     </body>
     <footer>
